examples/errors/pe_malinformed_section_header.raq
[request
POST https://jsonplaceholder.typicode.com/posts

[request
Content-Type: application/json

[body type="json"]
{
  "title": "bar"
}

[assertions]
json_field: title ^foo$
